--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "zapagent-bot",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.0",
     "axios": "^1.6.8",
-    "pino": "^8.17.0"
+    "pino": "^8.17.0",
+    "@hapi/boom": "^10.0.1"
   }
 }
