--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "zapagent-bot",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "type": "module",
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.0",
-    "axios": "^1.6.8",
-    "pino": "^8.17.0",
-    "@hapi/boom": "^10.0.1"
+    "@whiskeysockets/baileys": "^6.5.0",
+    "@hapi/boom": "^11.1.0",
+    "axios": "^1.6.8"
   }
 }
