--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "zapagent-bot",
   "version": "1.0.0",
-  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
-    "@hapi/boom": "^10.0.1",
     "axios": "^1.6.8"
   }
 }
