--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0",
-    "axios": "^1.9.0"
+    "@hapi/boom": "^10.0.1",
+    "axios": "^1.6.8",
+    "qrcode-terminal": "^0.12.0"
   }
 }
