--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@hapi/boom": "^11.0.0",
     "@whiskeysockets/baileys": "^6.6.0",
-    "@hapi/boom": "^10.0.1",
     "axios": "^1.6.8",
+    "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0"
   }
 }
