--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "zapagent-bot",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.6.0",
     "axios": "^1.6.8",
-    "express": "^4.19.2",
-    "qrcode-terminal": "^0.12.0"
+    "express": "^4.18.2"
   }
 }
