--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
   "name": "zapagent-bot",
   "version": "1.0.0",
-  "type": "module",
+  "description": "WhatsApp bot with AI integration",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "echo \"No build necessary for this project\""
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.6.0",
-    "axios": "^1.6.8",
-    "express": "^4.18.2"
-  }
+    "axios": "^0.27.2",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
+    "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "14.x"
+  },
+  "author": "Rodrigo",
+  "license": "MIT"
 }
