--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "zapagent-bot",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Bot do WhatsApp com IA via OpenRouter",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.18",
+    "@whiskeysockets/baileys": "^6.7.0",
     "axios": "^1.6.8",
     "express": "^4.19.2"
   }
