--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.0",
     "axios": "^1.6.8",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "qrcode": "^1.5.3"
   }
 }
