--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@whiskeysockets/baileys": "^6.7.0",
     "axios": "^1.6.8",
     "express": "^4.19.2",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "cors": "^2.8.5" // 👉 ADICIONADO
   }
 }
