--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "axios": "^1.6.8",
     "express": "^4.19.2",
     "qrcode": "^1.5.3",
-    "cors": "^2.8.5" // 👉 ADICIONADO
+    "cors": "^2.8.5"
   }
 }
