--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.0",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "qrcode": "^1.5.3",
-    "cors": "^2.8.5"
+    "qrcode": "^1.5.3"
   }
 }
